--- a/deploy.yaml
+++ b/deploy.yaml
@@ -55,4 +55,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8000
-  type: LoadBalancer  # Use LoadBalancer for external access
+  type: LoadBalancer
