--- a/deploy1.yaml
+++ b/deploy1.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
 name: node-wireguard
-namespace: auth
+namespace: wireguard
 spec:
 serviceName: "node-wireguard"
 replicas: 2 # Updated for 2 replicas
@@ -113,7 +113,7 @@ apiVersion: v1
 kind: Service
 metadata:
 name: node-wireguard-tcp
-namespace: auth
+namespace: wireguard
 annotations:
 service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 service.beta.kubernetes.io/aws-load-balancer-internal: "false"
@@ -133,7 +133,7 @@ apiVersion: v1
 kind: Service
 metadata:
 name: node-wireguard-udp
-namespace: auth
+namespace: wireguard
 spec:
 type: NodePort # Changed to NodePort for exposing WireGuard ports
 selector:
